--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>js-biglietto-treno</title>
 
+    <!-- STYLE CSS -->
+
+    <link rel="stylesheet" href="./style/style.css" />
+
     <!-- SCRIPT JAVASCRIPT -->
 
     <script type="text/Javascript" src="./js/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="ticket">
+      <h2>Biglietto del Treno</h2>
+      <p><span class="info">Nome:</span></p>
+      <p><span class="info">Partenza:</span></p>
+      <p><span class="info">Destinazione:</span></p>
+      <p><span class="info">Data:</span></p>
+      <p><span class="info">Ora:</span></p>
+      <p><span class="info"></span></p>
+      <p><span class="info"></span></p>
+    </div>
+  </body>
 </html>
