--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
     <div class="ticket">
       <h2>Biglietto del Treno</h2>
       <p><span class="info">Nome:</span></p>
-      <p><span class="info">Partenza:</span></p>
-      <p><span class="info">Destinazione:</span></p>
-      <p><span class="info">Data:</span></p>
-      <p><span class="info">Ora:</span></p>
-      <p><span class="info"></span></p>
-      <p><span class="info"></span></p>
+      <p><span class="info">Cognome:</span></p>
+      <p><span class="info">prezzo:</span></p>
     </div>
   </body>
 </html>
