fix JS file and ticket on HTML

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </head>
   <body>
     <div class="ticket">
-      <h2>Biglietto del Treno</h2>
-      <p><span class="info">Nome:</span></p>
-      <p><span class="info">Cognome:</span></p>
-      <p><span class="info">prezzo:</span></p>
+      <h2>Biglietto Ferroviario</h2>
+      <p>km:<span id="distance"></span></p>
+      <p>età:<span id="age"></span></p>
+      <p>prezzo:<span id="price"></span></p>
+      <h3>Grazie per averci scelto e buon viaggio</h3>
     </div>
   </body>
 </html>
